--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,36 @@
 .footer-container {
     background-color: #242424;
-    padding: 4rem 0 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-self: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#github {
+    font-size: 35px;
+    padding-right: 40px;
+    color: white;
+}
+
+#github:hover {
+    color: grey;
+}
+
+#linkedin {
+    font-size: 35px;
+    padding-left: 40px;
+    color: white;
+}
+
+#linkedin:hover {
+    color: grey;
+}
+
+.footer-links {
+    background-color: #242424;
+    display: flex;
+    flex-direction: row;
     align-self: center;
 }
