--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -89,8 +89,16 @@ h1 {
   transform: scale(1.1);
 }
 
+#underline {
+  font-size: 35px;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
 .cards__item__info {
   padding: 20px 30px 30px;
+  background-color: rgb(235, 233, 233);
 }
 
 .cards__item__text {
