--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,10 +1,14 @@
 .cards {
   padding: 4rem;
+  background-color: white;
 }
 
-h1 {
+.header {
   text-align: center;
+  font-size: 39px;
 }
+
+
 
 .cards__container {
   display: flex;
@@ -91,18 +95,19 @@ h1 {
 
 #underline {
   font-size: 35px;
-  color: white;
+  color: #f4623a;
   display: flex;
   justify-content: center;
 }
 
 .cards__item__info {
   padding: 20px 30px 30px;
-  background-color: rgb(235, 233, 233);
+  /* background-color: rgb(235, 233, 233); */
+  background-color: #242424;
 }
 
 .cards__item__text {
-  color: #252e48;
+  color: white;
   font-size: 18px;
   line-height: 24px;
 }
