--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
-    padding-top: 60px;
-    padding-bottom: 100px;
+    padding-top: 90px;
+    padding-bottom: 80px;
 }
 
 .p {
@@ -29,5 +29,11 @@
 .heading {
     text-align: center;
     font-size: 40px;
-    padding-bottom: 20px;
+}
+
+#divider {
+    width: 60px;
+    margin: 0 auto;
+    border-width: 5px;
+    border-top: 4px solid #f4623a;
 }
