--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -31,6 +31,10 @@
     display: flex;
     align-items: center;
   }
+
+  .navbar-logo:hover {
+    color: #fff;
+  }
   
   .fa-typo3 {
     margin-left: 0.5rem;
@@ -65,6 +69,7 @@
   .nav-links:hover {
     border-bottom: 4px solid #fff;
     transition: all 0.2s ease-out;
+    color: white;
   }
   
   .fa-bars {
