--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -25,8 +25,9 @@
 }
 
 .btn--medium {
-    padding: 8px 20px;
-    font-size: 20px;
+    padding: 5px 16px;
+    font-size: 1.2rem;
+    margin-top: -20px;
 }
 
 .btn--large {
