--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -83,6 +83,10 @@
   .menu-icon {
     display: none;
   }
+
+  .button {
+    width: 20px;
+  }
   
   @media screen and (max-width: 960px) {
     .NavbarItems {
@@ -93,9 +97,9 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 90vh;
+      height: 95vh;
       position: absolute;
-      top: 80px;
+      top: 65px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
