--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,9 @@
   color: #fff;
   font-size: 100px;
 }
+html,body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
