--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -58,3 +58,13 @@
         width: 100%;
     }
 }
+@media screen and (max-width: 360px) {
+    .hero-container > h1 {
+        font-size: 40px;
+        margin-top: -100px;
+    }
+
+    .hero-container > p {
+        font-size: 25px;
+    }
+}
