--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,7 +27,7 @@
     margin-left: 20px;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.6rem;
     display: flex;
     align-items: center;
   }
@@ -128,7 +128,7 @@
   
     .navbar-logo {
       position: absolute;
-      top: 0;
+      top: 16px;
       left: 0;
       transform: translate(25%, 50%);
     }
@@ -136,7 +136,7 @@
     .menu-icon {
       display: block;
       position: absolute;
-      top: 0;
+      top: -12px;
       right: 0;
       transform: translate(-100%, 60%);
       font-size: 1.8rem;
