--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -129,3 +129,9 @@
     width: 400px;
   }
 }
+@media only screen and (max-width: 380px) {
+  .cards__item {
+    margin-bottom: 2rem;
+    width: 320px;
+  }
+}
