--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -37,3 +37,11 @@
     border-width: 5px;
     border-top: 4px solid #f4623a;
 }
+
+@media only screen and (max-width: 380px) {
+    .skills-container {
+        display: flex;
+        flex-direction: column;
+        padding: 60px;
+    }
+  }
