--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -38,10 +38,15 @@
     border-top: 4px solid #f4623a;
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 770px) {
+    .whole {
+        display: flex;
+        flex-flow: column;
+        margin: 0 auto;
+    }
     .skills-container {
         display: flex;
-        flex-direction: column;
-        padding: 60px;
+        flex-flow: column;
+        margin: 0 auto;
     }
   }
