--- a/src/components/About.css
+++ b/src/components/About.css
@@ -41,7 +41,15 @@
         height: 400px;
     }
   }
+  
 @media only screen and (max-width: 1024px) {
+    .image {
+        width: 250px;
+        height: 400px;
+    }
+  }
+
+@media only screen and (min-width: 1024px) {
     .image {
         width: 250px;
         height: 400px;
@@ -51,10 +59,5 @@
 @media only screen and (max-width: 380px) {
     .about-text {
         width: 350px;
-    }
-    
-    .image {
-        width: 150px;
-        height: 300px;
     }
   }
