--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .hero-container {
-    background: url('https://www.iris.tv/wp-content/uploads/2018/08/bigstock-Austin-Texas-USA-skyline-on-138847055.jpg') center center/cover no-repeat transparent;
+    background: url('skyline.jpg') center center/cover no-repeat transparent;
     height: 100vh;
     width: 100%;
     display: flex;
