--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -4,24 +4,24 @@
     text-align: center;
     padding-bottom: 55px;
     padding-top: 80px;
-    color: white;
+    color: black;
 }
 
 .contact-text {
     font-size: 25px;
     text-align: center;
     padding-bottom: 40px;
-    color: rgb(231, 229, 229);
+    color: black;
 }
 
 .number {
     font-size: 23px;
-    color: white
+    color: black
 }
 
 .email {
     font-size: 23px;
-    color: white
+    color: black
 }
 
 .email:hover {
@@ -42,7 +42,7 @@
 }
 
 #underline {
-    color: white;
+    color: black;
 }
 
 .link {
@@ -53,7 +53,7 @@
     width: 60px;
     margin: 0 auto;
     border-width: 5px;
-    border-top: 4px solid white;
+    border-top: 4px solid black;
     margin-top: 15px;
 }
 
