--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -9,6 +9,10 @@
   padding-bottom: 5px;
 }
 
+#projects {
+  background-color: rgb(212, 212, 212);
+}
+
 .cards__container {
   display: flex;
   flex-flow: column;
