--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .hero-container {
-    background: url('skyline.jpg') center center/cover no-repeat transparent;
+    background: url('skylinedark.jpg') center center/cover no-repeat transparent;
     height: 100vh;
     width: 100%;
     display: flex;
