--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #242424;
+    background-color: rgb(4,12,42);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,7 +29,7 @@
 }
 
 .footer-links {
-    background-color: #242424;
+    background-color: rgb(4,12,42);
     display: flex;
     flex-direction: row;
     align-self: center;
