--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background-color: rgb(4,12,42);
+    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
     height: 65px;
     display: flex;
     justify-content: center;
