--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -35,7 +35,7 @@
     width: 60px;
     margin: 0 auto;
     border-width: 5px;
-    border-top: 4px solid #f4623a;
+    border-top: 4px solid #1f98f4;
 }
 
 @media only screen and (max-width: 770px) {
